fix Species originaltypes not being copied