@@ -11,7 +11,6 @@ import com.uprfvx.romio.romhandlers.RomHandler;
 
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class EvolutionRandomizer extends Randomizer {
 
@@ -218,7 +217,7 @@ public class EvolutionRandomizer extends Randomizer {
         }
 
         private boolean isAlreadyChosenAsOtherSplitEvo(Species from, Species to) {
-            return from.getEvolutionsFrom().stream().map(Evolution::getTo).collect(Collectors.toList()).contains(to);
+            return from.getEvolutionsFrom().stream().map(Evolution::getTo).toList().contains(to);
         }
 
         /**
@@ -300,7 +299,7 @@ public class EvolutionRandomizer extends Randomizer {
         }
 
         private boolean isAnOriginalEvo(Species from, Species to) {
-            return allOriginalEvos.get(from).stream().map(Evolution::getTo).collect(Collectors.toList()).contains(to);
+            return allOriginalEvos.get(from).stream().map(Evolution::getTo).toList().contains(to);
         }
     }
 
